k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ribbonbe
  labels:
    app: ribbonbe
spec:
  selector:
    matchLabels:
      app: ribbonbe
  template:
    metadata:
      labels:
        app: ribbonbe
    spec:
      containers:
      - name: ribbonbe-app
        image: $IMAGE
        resources:
          limits:
            cpu: 250m
          requests:
            cpu: 200m
        volumeMounts:
        - name: google-gcs-key
          mountPath: /var/secrets/google
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
      - image: gcr.io/cloudsql-docker/gce-proxy:1.16
        name: cloudsql-proxy
        resources:
          limits:
            cpu: 100m
          requests:
            cpu: 100m
        command: ["/cloud_sql_proxy", "--dir=/cloudsql",
                  "-instances=ribbon-receipts:us-east4:ribbon-receipts-db=tcp:5432",
                  "-credential_file=/secrets/cloudsql/credentials.json"]
        volumeMounts:
          - name: cloudsql-oauth-credentials
            mountPath: /secrets/cloudsql
            readOnly: true
          - name: ssl-certs
            mountPath: /etc/ssl/certs
          - name: cloudsql
            mountPath: /cloudsql
      volumes:
        - name: google-gcs-key
          secret:
            secretName: cloudsql-oauth-credentials
        - name: cloudsql-oauth-credentials
          secret:
            secretName: cloudsql-oauth-credentials
        - name: ssl-certs
          hostPath:
            path: /etc/ssl/certs
        - name: cloudsql
          emptyDir: {}

---
apiVersion: v1
kind: Service
metadata:
  name: ribbonbe
  labels:
    app: ribbonbe
spec:
  type: NodePort
  ports:
  - port: 8080
    targetPort: 8080
    name: 'http-ingress'
  selector:
    app: ribbonbe
